# otus-gitlab-runner

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  requirements.txt  tasks.py  upload_script.sh
examples/: config.toml
infra/: main.tf  network.tf  terraform.tfvars.example  variables.tf
infra/scripts/: gitlabrunnersetup.sh  installDocker.sh  installSoft.sh  registerGLRunner.sh  setup.sh
scripts/: download_log.sh  setup-project-runner.sh
src/: check_projects.py  check_runners.py  logger.py
