[tool.poetry]
name = "gitlab-runner"
version = "0.1.0"
description = ""
authors = ["NickOsipov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
loguru = "0.7.2"
python-dotenv = "1.0.1"
requests = "2.32.3"
black = "24.10.0"
invoke = "2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
